--- a/.github/workflows/project-info.yml
+++ b/.github/workflows/project-info.yml
@@ -1,6 +1,12 @@
 name: Project Info
 
 on:
+  workflow_dispatch:
+    inputs:
+      project_number:
+        type: number
+        required: true
+
   workflow_call:
     inputs:
       project_number:
@@ -21,7 +27,7 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@7ce9ffdcdeb2ba82b01b51d6584a6a85872336d4
         with:
-          app_id: ${{ inputs.APP_ID }}
+          app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.CLIENT_PEM }}
   project-info:
     runs-on: ubuntu-latest
@@ -37,7 +43,7 @@ jobs:
           github-token: ${{ needs.token.outputs.token }}
           script: |
             console.log("CONTEXT: ", context);
-            const project_number = context.inputs.project_number;
+            const project_number = context.payload.inputs.project_number;
             const owner = context.repo.owner;
             
             console.log({ project_number, owner });
