--- a/.github/workflows/assign-issues.yml
+++ b/.github/workflows/assign-issues.yml
@@ -33,6 +33,9 @@ jobs:
     uses: timewarpinc/actions/.github/workflows/project-info.yml@main
     with:
       project_number: ${{  github.event.inputs }}
+    secrets:
+      APP_ID: ${{ secrets.APP_ID }}
+      CLIENT_PEM: ${{ secrets.CLIENT_PEM }}
   assign-issues:
     runs-on: ubuntu-latest
     needs: project_info
