--- a/.github/workflows/project-info.yml
+++ b/.github/workflows/project-info.yml
@@ -11,7 +11,7 @@ on:
     inputs:
       project_number:
         required: true
-        type: number
+        type: string
     outputs:
       project_id:
         description: "Project node_id"
