--- a/.github/workflows/assign-issues.yml
+++ b/.github/workflows/assign-issues.yml
@@ -47,9 +47,8 @@ jobs:
         with:
           github-token: ${{ steps.token.outputs.token }}
           script: |
-            context.needs = (${{ toJSON(needs) }});
             console.log("CONTEXT: ", context)
-            const project = needs.project_info.node_id;
+            const project = ${{ toJSON(needs.project_info.outputs.node_id) }};
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
             const state = context.payload.inputs.state;
