--- a/.github/workflows/assign-issues.yml
+++ b/.github/workflows/assign-issues.yml
@@ -47,8 +47,8 @@ jobs:
         with:
           github-token: ${{ steps.token.outputs.token }}
           script: |
-            console.log("CONTEXT: ", context)
-            const project = ${{ toJSON(needs.project_info.outputs.node_id) }};
+            console.log("CONTEXT: ", context, " OUTPUTS: ", ${{ toJSON(needs.project_info.outputs) }})
+            const project = ${{ toJSON(needs.project_info.outputs) }};
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
             const state = context.payload.inputs.state;
