--- a/.github/workflows/assign-issues.yml
+++ b/.github/workflows/assign-issues.yml
@@ -48,7 +48,7 @@ jobs:
           github-token: ${{ steps.token.outputs.token }}
           script: |
             console.log("CONTEXT: ", context, " OUTPUTS: ", ${{ toJSON(needs.project_info.outputs) }})
-            const project = ${{ toJSON(needs.project_info.outputs) }};
+            const project = ${{ toJSON(needs.project_info.outputs.project_id) }};
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
             const state = context.payload.inputs.state;
