--- a/.github/actions/project-info/action.yml
+++ b/.github/actions/project-info/action.yml
@@ -4,11 +4,10 @@ inputs:
   project_number:
     type: number
     required: true
-secrets:
    APP_ID:
-     required: false
+     required: true
    CLIENT_PEM:
-     required: false
+     required: true
 outputs:
   node_id:
     description: "Project node_id"
@@ -20,8 +19,8 @@ runs:
     id: token
     uses: tibdex/github-app-token@7ce9ffdcdeb2ba82b01b51d6584a6a85872336d4
     with:
-      app_id: ${{ secrets.APP_ID }}
-      private_key: ${{ secrets.CLIENT_PEM }}
+      app_id: ${{ inputs.APP_ID }}
+      private_key: ${{ inputs.CLIENT_PEM }}
 
   - name: Get Project info
     uses: actions/github-script@v5
@@ -30,7 +29,7 @@ runs:
       result-encoding: string
       github-token: ${{ steps.token.outputs.token }}
       script: |
-        const project_number = context.payload.inputs.project_number;
+        const project_number = ${{ inputs.project_number }};
         const owner = context.repo.owner;
 
         const getProject = `
