--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -26,33 +26,26 @@ on:
         required: true
 
 jobs:
-  project_info:
-    uses: timewarpinc/actions/.github/workflows/project-info.yml@main
-    with:
-      project_number: ${{ github.event.inputs.project_number }}
-    secrets:
-      APP_ID: ${{ secrets.APP_ID }}
-      CLIENT_PEM: ${{ secrets.CLIENT_PEM }}
-
   assign-issues:
     runs-on: ubuntu-latest
-    needs: project_info
     steps:
-      - name: Generate token
-        id: token
-        uses: tibdex/github-app-token@7ce9ffdcdeb2ba82b01b51d6584a6a85872336d4
+      - uses: actions/checkout@v2
+      - name: Get Project Info
+        id: project-info
+        uses: ./.github/actions/project-info
         with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.CLIENT_PEM }}
+          APP_ID: ${{ secrets.APP_ID }}
+          CLIENT_PEM: ${{ secrets.CLIENT_PEM }}
+          project_number: ${{ github.event.inputs.project_number }}
       - name: Assign Issue/PR to project
         uses: actions/github-script@v5
         with:
-          github-token: ${{ steps.token.outputs.token }}
+          github-token: ${{ steps.project-info.outputs.token }}
           script: |
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
             const node_id = context.payload.inputs.node_id;
-            const project = ${{ toJSON(needs.project_info.outputs.project_id) }};
+            const project = ${{ toJSON(steps.project-info.outputs.node_id) }};
 
             const query = `
               mutation($project:ID!, $id:ID!) {
