--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -27,7 +27,7 @@ on:
         type: string
         required: true
       project_number:
-        type: number
+        type: string
         required: true
 
 jobs:
