--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -52,7 +52,8 @@ jobs:
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
             const node_id = context.payload.inputs.node_id;
-            const project = ${{ toJSON(steps.project-info.outputs.node_id) }};
+            console.log({${{ toJSON(steps) }})
+            const project = (${{ toJSON(steps.project-info.outputs.node_id || "") }});
 
             const query = `
               mutation($project:ID!, $id:ID!) {
