--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -34,6 +34,7 @@ jobs:
   assign-issues:
     runs-on: ubuntu-latest
     steps:
+      - run: echo '${{ toJSON( github ) }}'
       - uses: actions/checkout@v2
         with:
           repository: timewarpinc/actions
