--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           APP_ID: ${{ secrets.APP_ID }}
           CLIENT_PEM: ${{ secrets.CLIENT_PEM }}
-          project_number: ${{ (github.event.inputs || inputs).project_number }}
+          project_number: ${{ inputs.project_number }}
       - name: Assign Issue/PR to project
         uses: actions/github-script@v5
         with:
@@ -52,7 +52,7 @@ jobs:
           script: |
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
-            const node_id = context.payload.inputs.node_id;
+            const node_id = ${{ toJSON(inputs.node_id) }};
             console.log({${{ toJSON(steps) }})
             const project = (${{ toJSON(steps.project_info.outputs.node_id) }});
 
