--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -53,8 +53,7 @@ jobs:
             const owner = context.repo.owner;
             const repo = context.payload.inputs.repo || context.repo.repo;
             const node_id = ${{ toJSON(inputs.node_id) }};
-            console.log({${{ toJSON(steps) }})
-            const project = (${{ toJSON(steps.project_info.outputs.node_id) }});
+            const project = ${{ toJSON(steps.project_info.outputs.node_id) }};
 
             const query = `
               mutation($project:ID!, $id:ID!) {
